--- a/index.html
+++ b/index.html
@@ -34,20 +34,73 @@
     <!-- ==============Header sections=============== -->
     <header class="container mx-auto">
         <section>
-            <div class="min-h-screen bg-base-200">
-                <div class="hero-content flex-col lg:flex-row-reverse">
-                  <img src="/images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div class=" text-black">
+                <div class="hero-content flex-col justify-between lg:flex-row-reverse">
                   <div>
-                    <h1 class="text-5xl font-bold">Box Office News!</h1>
-                    <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <img src="/images/banner.png" class="max-w-sm" />
+
+                    <div class="flex items-center gap-4 -mt-16 drop-shadow-lg bg-white rounded-lg p-5 w-60">
+                      <img class="w[45px]" src="./images/Star 5.png" alt="">
+                      <div class="">
+                        <h3 class=" text-xl font-semibold">5.00</h3>
+                        <p>Trust Pilot Rating</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h1 class="text-7xl font-extrabold">It's good <br>
+                      tea time at The <br>
+                      Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                    <button class="btn btn-primary bg-gradient-to-r from-red-500 to-orange-500 border-none">Exflore More<img src="./images/Frame.png" alt=""></button>
                   </div>
                 </div>
               </div>
         </section>
     </header>
     <!-- ===============Main Sections================= -->
-    <main></main>
+    <main class="container mx-auto">
+      <section class="text-center my-24">
+        <h3 class="text-3xl font-bold mb-5">Our Featured Products</h3>
+        <p class="lg: max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+          <!-- ==================Card ================== -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+            <!-- ==========Card One -->
+            <div class="card bg-gradient-to-b p-8 from-white shadow-xl">
+              <figure><img src="./images/tea-1.png" alt="" /></figure>
+              <div class="card-body">
+                <h2 class="text-2xl fob">Milk Tea</h2>
+                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- ==========Card Second -->
+            <div class="card p-8 bg-gradient-to-b from-white shadow-xl">
+              <figure><img src="./images/tea-2.png" alt="" /></figure>
+              <div class="card-body">
+                <h2 class="text-2xl fob">Milk Tea</h2>
+                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- ==========Card Third -->
+            <div class="card p-8 bg-gradient-to-b from-white shadow-xl">
+              <figure><img src="./images/tea-3.png" alt="" /></figure>
+              <div class="card-body">
+                <h2 class="text-2xl fob">Milk Tea</h2>
+                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- ==========Card Fourth -->
+            <div class="card bg-gradient-to-b p-8 from-white shadow-xl">
+              <figure><img src="./images/tea-4.png" alt="" /></figure>
+              <div class="card-body pt-8">
+                <h2 class="text-2xl fob">Milk Tea</h2>
+                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+          </div>
+      </section>
+    </main>
     <!-- =================Footer Sections================== -->
     <footer>
 
