--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class=" text-black">
                 <div class="hero-content flex-col justify-between lg:flex-row-reverse">
                   <div>
-                    <img src="/images/banner.png" class="max-w-sm" />
+                    <img src="./images/banner.png" class="max-w-sm" />
 
                     <div class="flex items-center gap-4 -mt-16 drop-shadow-lg bg-white rounded-lg p-5 w-60">
                       <img class="w[45px]" src="./images/Star 5.png" alt="">
@@ -60,6 +60,7 @@
     </header>
     <!-- ===============Main Sections================= -->
     <main class="container mx-auto">
+<!-- ===================Features Sections===================================== -->
       <section class="text-center my-24">
         <h3 class="text-3xl font-bold mb-5">Our Featured Products</h3>
         <p class="lg: max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
