--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!-- ==================Card ================== -->
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
             <!-- ==========Card One -->
-            <div class="card bg-gradient-to-b p-8 from-white shadow-xl">
+            <div class="card bg-gradient-to-t p-8 from-white shadow-xl">
               <figure><img src="./images/tea-1.png" alt="" /></figure>
               <div class="card-body">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -76,7 +76,7 @@
               </div>
             </div>
             <!-- ==========Card Second -->
-            <div class="card p-8 bg-gradient-to-b from-white shadow-xl">
+            <div class="card p-8 bg-gradient-to-t from-white shadow-xl">
               <figure><img src="./images/tea-2.png" alt="" /></figure>
               <div class="card-body">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -84,7 +84,7 @@
               </div>
             </div>
             <!-- ==========Card Third -->
-            <div class="card p-8 bg-gradient-to-b from-white shadow-xl">
+            <div class="card p-8 bg-gradient-to-t from-white shadow-xl">
               <figure><img src="./images/tea-3.png" alt="" /></figure>
               <div class="card-body">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -92,7 +92,7 @@
               </div>
             </div>
             <!-- ==========Card Fourth -->
-            <div class="card bg-gradient-to-b p-8 from-white shadow-xl">
+            <div class="card bg-gradient-to-t p-8 from-white shadow-xl">
               <figure><img src="./images/tea-4.png" alt="" /></figure>
               <div class="card-body pt-8">
                 <h2 class="text-2xl fob">Milk Tea</h2>
