create a grid layout with responsive

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!-- ==================Card ================== -->
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
             <!-- ==========Card One -->
-            <div class="card bg-gradient-to-t p-8 from-white shadow-xl">
+            <div class="card  p-8 bg-gradient-to-b from-slate-100">
               <figure><img src="./images/tea-1.png" alt="" /></figure>
               <div class="card-body">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -76,7 +76,7 @@
               </div>
             </div>
             <!-- ==========Card Second -->
-            <div class="card p-8 bg-gradient-to-t from-white shadow-xl">
+            <div class="card p-8 bg-gradient-to-b from-slate-100">
               <figure><img src="./images/tea-2.png" alt="" /></figure>
               <div class="card-body">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -84,7 +84,7 @@
               </div>
             </div>
             <!-- ==========Card Third -->
-            <div class="card p-8 bg-gradient-to-b from-white shadow-xl">
+            <div class="card p-8 bg-gradient-to-b from-slate-100">
               <figure><img src="./images/tea-3.png" alt="" /></figure>
               <div class="card-body">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -92,7 +92,7 @@
               </div>
             </div>
             <!-- ==========Card Fourth -->
-            <div class="card bg-gradient-to-b p-8 from-white shadow-xl">
+            <div class="card  p-8 bg-gradient-to-b from-slate-100">
               <figure><img src="./images/tea-4.png" alt="" /></figure>
               <div class="card-body pt-8">
                 <h2 class="text-2xl fob">Milk Tea</h2>
@@ -101,7 +101,31 @@
             </div>
           </div>
       </section>
-
+<!-- ========================================= -->
+      <section class="flex gap-x-12 flex-col lg:flex-row">
+        
+          <!-- ============Part One=== -->
+          <div class="flex-1 gap-8 grid grid-cols-1 md:grid-cols-2">
+            <div class="rounded-xl h-[135px] bg-gradient-to-r from-orange-100"></div>
+            <div class="row-span-2 rounded-xl bg-[#E6A6231A] px-8 py-12 flex justify-center">
+              <img src="./images/fresh-1.png" alt="">
+            </div>
+            <div class="row-span-2 rounded-xl bg-[#574E391A] px-8 py-12 flex justify-center">
+              <img src="./images/fresh-2.png" alt="">
+            </div>
+            <div class="rounded-xl h-[135px] bg-gradient-to-r from-lime-100"></div>
+          </div>
+          <!-- ============Part Tow==== -->
+          <div class="flex-1 space-y-6">
+            <h3 class="text-7xl font-extrabold">Great Tea, Freshly <br>
+               Presented</h3>
+            <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h4 class="text-2xl font-bold">Unique Taste</h4>
+            <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h4 class="text-2xl font-bold">Premium Quality</h4>
+            <p class="font-semibold leading-7">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+          </div>
+      </section>
     </main>
     <!-- =================Footer Sections================== -->
     <footer>
