--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
       </section>
 <!-- ========================================= -->
-      <section class="flex gap-x-12 flex-col lg:flex-row">
+      <section class="flex p-4 gap-x-12 flex-col lg:flex-row ">
         
           <!-- ============Part One=== -->
           <div class="flex-1 gap-8 grid grid-cols-1 md:grid-cols-2">
