--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="font-manrope">
     <!-- ==============Header sections=============== -->
     <header class="container mx-auto">
-        <section>
+        <section class="p-4">
             <div class=" text-black">
                 <div class="hero-content flex-col justify-between lg:flex-row-reverse">
                   <div>
@@ -61,7 +61,7 @@
     <!-- ===============Main Sections================= -->
     <main class="container mx-auto">
 <!-- ===================Features Sections===================================== -->
-      <section class="text-center my-24">
+      <section class="text-center my-24 p-4">
         <h3 class="text-3xl font-bold mb-5">Our Featured Products</h3>
         <p class="lg: max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
 
@@ -101,7 +101,7 @@
             </div>
           </div>
       </section>
-<!-- ========================================= -->
+<!-- ================== Great Tea ======================= -->
       <section class="flex p-4 gap-x-12 flex-col lg:flex-row ">
         
           <!-- ============Part One=== -->
