--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<!-- =============Tailwind Daisy============== -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.3/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-<!-- ===============Font===================== -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-<!-- =============Color Custom=============== -->
-<script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- =============Tailwind Daisy============== -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.3/dist/full.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- ===============Font===================== -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- =============Color Custom=============== -->
+  <script>
     tailwind.config = {
       theme: {
         extend: {
@@ -24,113 +25,170 @@
     }
   </script>
 
-    <style>
-        .font-manrope{
-            font-family: 'Manrope', sans-serif;
-        }
-    </style>
+  <style>
+    .font-manrope {
+      font-family: 'Manrope', sans-serif;
+    }
+  </style>
 </head>
+
 <body class="font-manrope">
-    <!-- ==============Header sections=============== -->
-    <header class="container mx-auto">
-        <section class="p-4">
-            <div class=" text-black">
-                <div class="hero-content flex-col justify-between lg:flex-row-reverse">
-                  <div>
-                    <img src="./images/banner.png" class="max-w-sm" />
+  <!-- ==============Header sections=============== -->
+  <header class="container mx-auto">
+    <section class="p-4">
+      <div class=" text-black">
+        <div class="hero-content flex-col justify-between lg:flex-row-reverse">
+          <div>
+            <img src="./images/banner.png" class="max-w-sm" />
 
-                    <div class="flex items-center gap-4 -mt-16 drop-shadow-lg bg-white rounded-lg p-5 w-60">
-                      <img class="w[45px]" src="./images/Star 5.png" alt="">
-                      <div class="">
-                        <h3 class=" text-xl font-semibold">5.00</h3>
-                        <p>Trust Pilot Rating</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div>
-                    <h1 class="text-7xl font-extrabold">It's good <br>
-                      tea time at The <br>
-                      Tea House</h1>
-                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                    <button class="btn btn-primary bg-gradient-to-r from-red-500 to-orange-500 border-none">Exflore More<img src="./images/Frame.png" alt=""></button>
-                  </div>
-                </div>
-              </div>
-        </section>
-    </header>
-    <!-- ===============Main Sections================= -->
-    <main class="container mx-auto">
-<!-- ===================Features Sections===================================== -->
-      <section class="text-center my-24 p-4">
-        <h3 class="text-3xl font-bold mb-5">Our Featured Products</h3>
-        <p class="lg: max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-
-          <!-- ==================Card ================== -->
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <!-- ==========Card One -->
-            <div class="card  p-8 bg-gradient-to-b from-slate-100">
-              <figure><img src="./images/tea-1.png" alt="" /></figure>
-              <div class="card-body">
-                <h2 class="text-2xl fob">Milk Tea</h2>
-                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
-              </div>
-            </div>
-            <!-- ==========Card Second -->
-            <div class="card p-8 bg-gradient-to-b from-slate-100">
-              <figure><img src="./images/tea-2.png" alt="" /></figure>
-              <div class="card-body">
-                <h2 class="text-2xl fob">Milk Tea</h2>
-                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
-              </div>
-            </div>
-            <!-- ==========Card Third -->
-            <div class="card p-8 bg-gradient-to-b from-slate-100">
-              <figure><img src="./images/tea-3.png" alt="" /></figure>
-              <div class="card-body">
-                <h2 class="text-2xl fob">Milk Tea</h2>
-                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
-              </div>
-            </div>
-            <!-- ==========Card Fourth -->
-            <div class="card  p-8 bg-gradient-to-b from-slate-100">
-              <figure><img src="./images/tea-4.png" alt="" /></figure>
-              <div class="card-body pt-8">
-                <h2 class="text-2xl fob">Milk Tea</h2>
-                <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+            <div class="flex items-center gap-4 -mt-16 drop-shadow-lg bg-white rounded-lg p-5 w-60">
+              <img class="w[45px]" src="./images/Star 5.png" alt="">
+              <div class="">
+                <h3 class=" text-xl font-semibold">5.00</h3>
+                <p>Trust Pilot Rating</p>
               </div>
             </div>
           </div>
-      </section>
-<!-- ================== Great Tea ======================= -->
-      <section class="flex p-4 gap-x-12 flex-col lg:flex-row ">
-        
-          <!-- ============Part One=== -->
-          <div class="flex-1 gap-8 grid grid-cols-1 md:grid-cols-2">
-            <div class="rounded-xl h-[135px] bg-gradient-to-r from-orange-100"></div>
-            <div class="row-span-2 rounded-xl bg-[#E6A6231A] px-8 py-12 flex justify-center">
-              <img src="./images/fresh-1.png" alt="">
-            </div>
-            <div class="row-span-2 rounded-xl bg-[#574E391A] px-8 py-12 flex justify-center">
-              <img src="./images/fresh-2.png" alt="">
-            </div>
-            <div class="rounded-xl h-[135px] bg-gradient-to-r from-lime-100"></div>
+          <div>
+            <h1 class="text-7xl font-extrabold">It's good <br>
+              tea time at The <br>
+              Tea House</h1>
+            <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button class="btn btn-primary bg-gradient-to-r from-red-500 to-orange-500 border-none">Exflore More<img
+                src="./images/Frame.png" alt=""></button>
           </div>
-          <!-- ============Part Tow==== -->
-          <div class="flex-1 space-y-6">
-            <h3 class="text-7xl font-extrabold">Great Tea, Freshly <br>
-               Presented</h3>
-            <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
-            <h4 class="text-2xl font-bold">Unique Taste</h4>
-            <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-            <h4 class="text-2xl font-bold">Premium Quality</h4>
-            <p class="font-semibold leading-7">Premium Quality that makes tea more elegant and more durable when you use it.</p>
-          </div>
-      </section>
-    </main>
-    <!-- =================Footer Sections================== -->
-    <footer>
+        </div>
+      </div>
+    </section>
+  </header>
+  <!-- ===============Main Sections================= -->
+  <main class="container mx-auto">
+    <!-- ===================Features Sections===================================== -->
+    <section class="text-center my-5 lg:my-24 p-4">
+      <h3 class="text-3xl font-bold mb-5">Our Featured Products</h3>
+      <p class="lg: max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the
+        majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+        slightly believable. </p>
 
-    </footer>
-    
+      <!-- ==================Card ================== -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <!-- ==========Card One -->
+        <div class="card  p-8 bg-gradient-to-b from-slate-100">
+          <figure><img src="./images/tea-1.png" alt="" /></figure>
+          <div class="card-body">
+            <h2 class="text-2xl fob">Milk Tea</h2>
+            <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- ==========Card Second -->
+        <div class="card p-8 bg-gradient-to-b from-slate-100">
+          <figure><img src="./images/tea-2.png" alt="" /></figure>
+          <div class="card-body">
+            <h2 class="text-2xl fob">Milk Tea</h2>
+            <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- ==========Card Third -->
+        <div class="card p-8 bg-gradient-to-b from-slate-100">
+          <figure><img src="./images/tea-3.png" alt="" /></figure>
+          <div class="card-body">
+            <h2 class="text-2xl fob">Milk Tea</h2>
+            <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+        <!-- ==========Card Fourth -->
+        <div class="card  p-8 bg-gradient-to-b from-slate-100">
+          <figure><img src="./images/tea-4.png" alt="" /></figure>
+          <div class="card-body pt-8">
+            <h2 class="text-2xl fob">Milk Tea</h2>
+            <p class="w-[200px]  mx-auto">Creamer could be replaced by fresh milk</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ================== Great Tea ======================= -->
+    <section class="flex p-4 gap:5 lg:gap-x-12 flex-col lg:flex-row ">
+
+      <!-- ============Part One=== -->
+      <div class="flex-1 gap-8 grid grid-cols-1 md:grid-cols-2">
+        <div class="rounded-xl h-[135px] bg-gradient-to-r from-orange-100"></div>
+        <div class="row-span-2 rounded-xl bg-[#E6A6231A] px-8 py-12 flex justify-center">
+          <img src="./images/fresh-1.png" alt="">
+        </div>
+        <div class="row-span-2 rounded-xl bg-[#574E391A] px-8 py-12 flex justify-center">
+          <img src="./images/fresh-2.png" alt="">
+        </div>
+        <div class="rounded-xl h-[135px] bg-gradient-to-r from-lime-100"></div>
+      </div>
+      <!-- ============Part Tow==== -->
+      <div class="flex-1 space-y-6">
+        <h3 class="text-7xl font-extrabold">Great Tea, Freshly <br>
+          Presented</h3>
+        <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents
+          the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its
+          custoers because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <h4 class="text-2xl font-bold">Unique Taste</h4>
+        <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <h4 class="text-2xl font-bold">Premium Quality</h4>
+        <p class="font-semibold leading-7">Premium Quality that makes tea more elegant and more durable when you use it.
+        </p>
+      </div>
+    </section>
+
+    <!-- ===================Meet Our Super Clients Section=========================== -->
+    <section
+      class=" my-5 lg:my-24 flex flex-col lg:flex-row gap-y-10 lg:gap-y-12 bg-gradient-to-r from-orange-500 to-red-500 rounded-lg p-4 lg:py-24 lg:px-16">
+      <div class="flex items-center">
+        <div class="space-y-8">
+            <h3 class="text-7xl font-extrabold text-white">Meet Our Super <br> Clients</h3>
+            <p class="font-medium text-white lg:pr-28">There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+              even slightly believable. </p>
+            <button class="btn btn-warning hover:bg-gray-100 text-2xl font-bold bg-white border-none text-orange-500 hover:text-g">Show All</button>
+        </div>
+      </div>
+      <div class="relative px-10">
+        <!-- =========Review 1 ========== -->
+        <div class="p-10 opacity-50 relative z-10 rounded-lg bg-white">
+          <img class="absolute -top-5 -left-5 border-4 rounded-full bg-white" src="./images/client.png" alt="">
+          <p class="text-base font-medium">We are providing the best and suitable home insurance services for the people
+            who are interested to treatment</p>
+          <p class="text-xl font-bold mt-5">Ilham Yuda</p>
+          <p>Businessman</p>
+          <div class="flex justify-end">
+            <img src="./images///circles.png" alt="">
+          </div>
+        </div>
+        <!-- =========Review 2 ========== -->
+        <div class="p-10 absolute z-20 top-40 lg:-left-32 lg:w-[433px] rounded-lg bg-white">
+          <img class="absolute -top-5 -left-5 border-4 rounded-full bg-white" src="./images/client.png" alt="">
+          <p class="text-base font-medium">We are providing the best and suitable home insurance services for the people
+            who are interested to treatment</p>
+          <p class="text-xl font-bold mt-5">Ilham Yuda</p>
+          <p>Businessman</p>
+          <div class="flex justify-end">
+            <img src="./images///circles.png" alt="">
+          </div>
+        </div>
+        <!-- =========Review 3 ========== -->
+        <div class="p-10 opacity-50 relative z-10 rounded-lg bg-white mt-16">
+          <img class="absolute -top-5 -left-5 border-4 rounded-full bg-white" src="./images/client.png" alt="">
+          <p class="text-base font-medium">We are providing the best and suitable home insurance services for the people
+            who are interested to treatment</p>
+          <p class="text-xl font-bold mt-5">Ilham Yuda</p>
+          <p>Businessman</p>
+          <div class="flex justify-end">
+            <img src="./images///circles.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- =================Footer Sections================== -->
+  <footer>
+
+  </footer>
+
 </body>
+
 </html>
