finish news sections with responsive

--- a/index.html
+++ b/index.html
@@ -183,6 +183,41 @@
         </div>
       </div>
     </section>
+<!-- ======================News & Events==================================== -->
+    <section class="my-5 md:my-15 lg:my-24 p-5">
+      <h3 class="text-center text-6xl font-extrabold ">News & Events</h3>
+      <p class="text-center pt-5 pb-10">There are many variations of passages of Lorem Ipsum available,but the majority have suffered alteration in some form, <br>
+        by injected humour,or randomised words which don't look even slightly believable.</p>
+      <!-- =====Card Section=== -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 ">
+        <!-- ======Card One====== -->
+        <div class="card shadow-md p-5 gap-y-4">
+          <img src="./images/news-1.png" alt="">
+          <p>oct 30, 2023</p>
+          <h3 class="text-xl font-bold">Collecting 8 points for <br> discount</h3>
+          <p>There are many variations of passages of <br>
+             Lorem Ipsum available.</p>
+          <p class="text-base font-bold">Learn More</p>
+        </div>
+        <!-- ======Card Two====== -->
+        <div class="card shadow-md p-5 gap-y-4">
+          <img src="./images/news-2.png" alt="">
+          <p>oct 30, 2023</p>
+          <h3 class="text-xl font-bold">Collecting 8 points for <br> discount</h3>
+          <p>There are many variations of passages of <br>
+             Lorem Ipsum available.</p>
+          <p class="text-base font-bold">Learn More</p>
+        </div>
+        <!-- ======Card Three====== -->
+        <div class="card shadow-md p-5 gap-y-4">
+          <img src="./images/news-3.png" alt="">
+          <p>oct 30, 2023</p>
+          <h3 class="text-xl font-bold">Collecting 8 points for <br> discount</h3>
+          <p>There are many variations of passages of <br>
+             Lorem Ipsum available.</p>
+          <p class="text-base font-bold">Learn More</p>
+        </div>
+    </section>
   </main>
   <!-- =================Footer Sections================== -->
   <footer>
