finish footer sectiond with responsive

--- a/index.html
+++ b/index.html
@@ -218,10 +218,62 @@
           <p class="text-base font-bold">Learn More</p>
         </div>
     </section>
+
   </main>
   <!-- =================Footer Sections================== -->
-  <footer>
+  <footer class="bg-red-100 p-5">
+      <div class="flex flex-col lg:flex-row justify-around container mx-auto p-10">
+        <div></div>
+        <div class="flex items-center gap-x-12">
+          <h3 class="text-xl font-bold">Get Started</h3>
+          <button class="btn btn-primary bg-gradient-to-r from-red-500 to-orange-500 border-none">Get Started</button>
+        </div>
+      </div>
 
+    <div class="container mx-auto text-base-content footer p-10">
+      <nav>
+        <header class="footer-title">Quick Links</header> 
+        <a class="link link-hover">Home</a> 
+        <a class="link link-hover">About Us</a> 
+        <a class="link link-hover">Insurance</a> 
+        <a class="link link-hover">Privacy-Policy</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Our Service</header> 
+        <a class="link link-hover">Life Insurance</a> 
+        <a class="link link-hover">Car Insurance</a> 
+        <a class="link link-hover">Health Insurance</a> 
+        <a class="link link-hover">House Insurance</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Help</header> 
+        <a class="link link-hover">FAQs</a> 
+        <a class="link link-hover">Contact Us</a> 
+        
+      </nav> 
+      <form>
+        <header class="footer-title">Subscribe to our <br>
+          newsletter</header> 
+        <fieldset class="form-control w-80">
+          <label class="label">
+            <span class="label-text">Enter your email address</span>
+          </label> 
+          <div class="relative">
+            <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" /> 
+            <button class="btn btn-primary bg-gradient-to-r from-red-500 to-orange-500 border-none absolute top-0 right-0 rounded-l-none">Subscribe</button>
+          </div>
+        </fieldset>
+        <div class="flex my-6 gap-4">
+          <div><img src="./Frame.png" alt=""></div>
+          <div><img src="./Twitter.png" alt=""></div>
+          <div><img src="./Insta.png" alt=""></div>
+        </div>
+      </form>
+      
+    </div>
+    <div class="container mx-auto flex lg:justify-evenly p-10">
+      <p class="">© 2027 UIDesign.to - All rights reserved.</p>
+    </div>
   </footer>
 
 </body>
